--- a/index.html
+++ b/index.html
@@ -270,11 +270,10 @@
 			<div class="team-member">
 			    <!--
                             <img class="mx-auto rounded-circle" src="assets/img/SEDNOL.jpg" alt="..." />
-                            <a href="https://www.youtube.com/watch?v=qt9jQ3tphfk" target="_blank"><h4>SEDNOL</h4></a>
-			    <p class="text-muted"> 
-				Spectral and nonlinear stability of Néel walls in ferromagnetic thin films 
+                            <a href="https://www.youtube.com/watch?v=qt9jQ3tphfk" target="_blank"><h4>SEDNOL</h4></a>-->
+			    <p class="text-muted">  
 			    </p>
-			    <h3 class="my-3"> (Spanish) </h3> -->
+			    <!--<h3 class="my-3"> (Spanish) </h3> -->
                             <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
                             
 			</div>    
