--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 			    <p class="text-muted"> 
 				Spectral and nonlinear stability of Néel walls in ferromagnetic thin films 
 			    </p>
-			    <h7 class="my-3"> (Spanish) </h7>
+			    <h6 class="my-3"> (<i> Spanish </i>) </h6>
                             <!-- <a class="btn btn-dark btn-social mx-2" href="https://www.matem.unam.mx/fsd/capella" target="_blank"><i class="fab fa-twitter"></i></a> -->
                         </div>
 			    <!--<div class="text-center">
