--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
                         <li class="nav-item"><a class="nav-link" href="#talks">Talks</a></li>
                         <li class="nav-item"><a class="nav-link" href="#teaching">Teaching</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#people">People of interest</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#people">Collaborators</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
                          
                     </ul>
@@ -362,8 +362,8 @@
         <section class="page-section bg-light" id="people">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">People of interest</h2>
-                    <h3 class="section-subheading text-muted"> Thanks to my mentors and friends  I learned to apply mathematics at different fields</h3>
+                    <h2 class="section-heading text-uppercase">Collaborator</h2>
+                    <h3 class="section-subheading text-muted"> Thanks to my mentors and friends, I learned to apply mathematics at different fields</h3>
                 </div>
                 <div class="row">
                     <div class="col-lg-4">
@@ -471,7 +471,7 @@
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close article
+                                        Back
                                     </button>
                                 </div>
                             </div>
@@ -503,7 +503,7 @@
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close Article
+                                        Back
                                     </button>
                                 </div>
                             </div>
@@ -524,7 +524,7 @@
                                     <!-- Project details-->
                                     <!--<h2 class="text-uppercase">Nonlinear Stability of Static Neel Walls in Ferromagnetic Thin Films</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_3_2.jpg" alt="..." />
-                                    <p class="item-intro text-muted">2023</p>
+                                    <p class="item-intro text-muted">2024</p>
 			            <p><a href="https://arxiv.org/abs/2309.04432" target="_blank"> Go to arXiv</a></p>		
 					<ul class="list-inline">
                                         <li>
@@ -534,7 +534,7 @@
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close article
+                                        Back
                                     </button>
                                 </div>
                             </div>
@@ -555,7 +555,7 @@
                                     <!-- Project details-->
                                     <!--<h2 class="text-uppercase">Stability of Moving Neel Walls in Ferromagnetic Thin Films</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_4.jpg" alt="..." />
-                                    <p class="item-intro text-muted">2023</p>
+                                    <p class="item-intro text-muted">2024</p>
 			            <p><a href="https://arxiv.org/abs/2409.04023" target="_blank"> Go to arXiv</a></p>		
 					<ul class="list-inline">
                                         <li>
@@ -565,7 +565,7 @@
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-xmark me-1"></i>
-                                        Close article
+                                        Back
                                     </button>
                                 </div>
                             </div>
