--- a/index.html
+++ b/index.html
@@ -165,6 +165,22 @@
                             </div>
                         </div>
                     </div>
+                    <div class="col-lg-4 col-sm-6 mb-4">
+		
+                        <!-- Portfolio item 5-->
+                        <div class="portfolio-item">
+                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
+                                <div class="portfolio-hover">
+                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
+                                </div>
+                                <img class="img-fluid" src="assets/img/portfolio/Articulo_5.jpg" alt="..." />
+                            </a>
+                            <div class="portfolio-caption">
+                                <div class="portfolio-caption-heading">Preprint</div>
+                                <div class="portfolio-caption-subheading text-muted"> Spectral stability of gaseous diffusion fronts in glassy polymers </div>
+                            </div>
+                        </div>
+                    </div>
 				
         </section>
         <!-- About-->
@@ -561,6 +577,37 @@
                                         <li>
                                             <strong>Category:</strong>
                                             Micromagnetism, Sprectral Theory, Kato's perturbation theory, and Nolinear Stability
+                                        </li>
+                                    </ul>
+                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                        <i class="fas fa-xmark me-1"></i>
+                                        Back
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Portfolio item 5 modal popup-->
+        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Project details-->
+                                    <!--<h2 class="text-uppercase">Spectral stability of gaseous diffusion fronts in glassy polymers</h2>-->
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_5.jpg" alt="..." />
+                                    <p class="item-intro text-muted">2024</p>
+			            <p><a href="https://arxiv.org/abs/2409.04023" target="_blank"> Go to arXiv</a></p>		
+					<ul class="list-inline">
+                                        <li>
+                                            <strong>Category:</strong>
+                                            Spectral stability, glassy polymers, Diffision
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
