--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/Articulo_3_2.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Accepted for publication</div>
+                                <div class="portfolio-caption-heading">Published Article</div>
                                 <div class="portfolio-caption-subheading text-muted"> Nonlinear Stability of Static Neel Walls in Ferromagnetic Thin Films </div>
                             </div>
                         </div>
@@ -176,7 +176,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/Articulo_5.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Preprint</div>
+                                <div class="portfolio-caption-heading">In preparation</div>
                                 <div class="portfolio-caption-subheading text-muted"> Spectral stability of gaseous diffusion fronts in glassy polymers </div>
                             </div>
                         </div>
@@ -602,8 +602,8 @@
                                     <!-- Project details-->
                                     <!--<h2 class="text-uppercase">Spectral stability of gaseous diffusion fronts in glassy polymers</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_5.jpg" alt="..." />
-                                    <p class="item-intro text-muted">2024</p>
-			            <p><a href="https://arxiv.org/abs/2409.04023" target="_blank"> Go to arXiv</a></p>		
+                                    <p class="item-intro text-muted">2025</p>
+			            <p><a href="https://arxiv.org/abs/2409.04023" target="_blank"> Online version</a></p>		
 					<ul class="list-inline">
                                         <li>
                                             <strong>Category:</strong>
