--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                 <div class="portfolio-hover">
                                     <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                                 </div>
-                                <img class="img-fluid" src="assets/img/portfolio/Articulo_3_2.jpg" alt="..." />
+                                <img class="img-fluid" src="assets/img/portfolio/Articulo_3_p1.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Published Article</div>
@@ -539,9 +539,9 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <!--<h2 class="text-uppercase">Nonlinear Stability of Static Neel Walls in Ferromagnetic Thin Films</h2>-->
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_3_2.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_3_p1.jpg" alt="..." />
                                     <p class="item-intro text-muted">2024</p>
-			            <p><a href="https://arxiv.org/abs/2309.04432" target="_blank"> Go to arXiv</a></p>		
+			            <p><a href="https://link.springer.com/article/10.1007/s00205-024-02074-9" target="_blank"> Go to published version</a></p>		
 					<ul class="list-inline">
                                         <li>
                                             <strong>Category:</strong>
