--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
                                     <ul class="list-inline">
                                         <li>
                                             <strong>Category:</strong>
-                                            Calculus of Variations and Partial Differential Equations
+                                            Journal of Elasticity
                                         </li>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
