--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
   					<li>Calculus of Variations</li>
 					<li>Spectral and Nonlinear Stability of Coherent Structures</li>
  					<li>Partial Differential Equations</li>
+					<li>Nonlocal operators</li>
   					<li>Analysis</li>
 					<li>Statistics and Probability</li>
 					<li>Scientific Programming</li>
@@ -160,7 +161,7 @@
                                 <img class="img-fluid" src="assets/img/portfolio/Articulo_4.jpg" alt="..." />
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Preprint</div>
+                                <div class="portfolio-caption-heading">Published Article</div>
                                 <div class="portfolio-caption-subheading text-muted"> Stability of Moving Neel Walls in Ferromagnetic Thin Films </div>
                             </div>
                         </div>
@@ -570,9 +571,11 @@
                                 <div class="modal-body">
                                     <!-- Project details-->
                                     <!--<h2 class="text-uppercase">Stability of Moving Neel Walls in Ferromagnetic Thin Films</h2>-->
-                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_4.jpg" alt="..." />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_4_final.jpg" alt="..." />
                                     <p class="item-intro text-muted">2024</p>
-			            <p><a href="https://arxiv.org/abs/2409.04023" target="_blank"> Go to arXiv</a></p>		
+			            <p><a href="https://arxiv.org/abs/2409.04023" target="_blank"> Go to arXiv</a></p>
+				    <p><a href="https://link.springer.com/article/10.1007/s00332-025-10179-y" target="_blank"> Go to published version</a></p>
+                                    
 					<ul class="list-inline">
                                         <li>
                                             <strong>Category:</strong>
