Update teaching section

--- a/index.html
+++ b/index.html
@@ -345,11 +345,12 @@
                         </span>
                         <h4 class="my-3">Teacher assistant </h4>
                          <p class="text-muted"><b>  Facultad de Ciencias - UNAM</b></p>
-                        <p class="text-muted"> Complex variable </p>
-                        <p class="text-muted"> Differential and integral calculus I - IV </p>      
-                        <p class="text-muted"> Fourier analysis </p>    
-                        <p class="text-muted"> Stochastic process </p>
-                        <p class="text-muted"> Electromagnetic theory </p>   
+                        <p class="text-muted"> Complex Variable </p>
+                        <p class="text-muted"> Differential and Integral Calculus I - IV </p>      
+                        <p class="text-muted"> Fourier Analysis </p>    
+                        <p class="text-muted"> Stochastic Process I and II </p>
+                        <p class="text-muted"> Differential Equations II </p>
+			<p class="text-muted"> Electromagnetic Theory </p>   
                        
                     </div>
                     <div class="col-md-4">
@@ -359,7 +360,7 @@
                         </span>
                         <h4 class="my-3">Teacher</h4>
                          <p class="text-muted"><b>  Facultad de Ciencias - UNAM</b></p>
-                       <p class="text-muted"> Differential and integral calculus I - IV </p> 
+                       <p class="text-muted"> Differential and Integral Calculus I - IV </p> 
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -369,9 +370,21 @@
                         <h4 class="my-3">Remote Teacher</h4>
 			<p class="text-muted"><b>  Mathematics at UnADM</b></p>
 			<p class="text-muted"> Statistics I </p>
-			<p class="text-muted"> Multivariable calculus </p>
-			<p class="text-muted"> Logic introduction </p>
+			<p class="text-muted"> Multivariable Calculus </p>
+			<p class="text-muted"> Introduction to Mathematical Thinking </p>
                     </div>
+		    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-book-open fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Highschool Teacher</h4>
+			<p class="text-muted"><b>  ENP 1 Gabino Barreda-UNAM</b></p>
+			<p class="text-muted"> Mathematics IV-VI </p>
+			<p class="text-muted"> Mathematics V </p>
+			<p class="text-muted"> Mathematics VI areas 2 and 3 </p>
+                    </div>
+
                 </div>
             </div>
         </section>
