--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         <section class="page-section" id="teaching">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Teaching</h2>
+                    <h2 class="section-heading text-uppercase">University Teaching</h2>
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
                 <div class="row text-center">
@@ -360,7 +360,10 @@
                         </span>
                         <h4 class="my-3">Teacher</h4>
                          <p class="text-muted"><b>  Facultad de Ciencias - UNAM</b></p>
-                       <p class="text-muted"> Differential and Integral Calculus I - IV </p> 
+                       <p class="text-muted"> Differential and Integral Calculus I</p>
+		       <p class="text-muted"> Differential and Integral Calculus II</p>
+		       <p class="text-muted"> Differential and Integral Calculus III</p>
+		       <p class="text-muted"> Differential and Integral Calculus IV</p>
                     </div>
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -375,10 +378,10 @@
                     </div>
 		</div>
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Highschool Teaching</h2>
+                    <h2 class="section-heading text-uppercase">High School Teaching</h2>
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
-                <div class="row text-center">
+                <div class="text-center">
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
