--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-book-open fa-stack-1x fa-inverse"></i>
+                            <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
                         </span>
                         <h4 class="my-3">Highschool Teacher</h4>
 			<p class="text-muted"><b>  ENP 1 Gabino Barreda-UNAM</b></p>
