--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 			
 	            <div class="column" style="width:70%">
 	           	<p class="text-muted">
+			    <i class="fa fa-quote-left fa-3x fa-pull-left fa-border" aria-hidden="true"></i>
                             I consider myself a skilled person who easily adapts to different situations and working conditions.
 		             <br></br>	
 			    I am interested in studying coherent structures that emerge from nonlinear models of continuous media. 
