--- a/index.html
+++ b/index.html
@@ -69,9 +69,7 @@
 	            <div class="column" style="width:70%">
 	           	<p class="text-muted">
 			    <i class="fa fa-quote-left fa-3x fa-pull-left fa-border" aria-hidden="true"></i>
-                            I consider myself a skilled person who easily adapts to different situations and working conditions.
-		             <br></br>	
-			    I am interested in studying coherent structures that emerge from nonlinear models of continuous media. 
+                            I am interested in studying coherent structures that emerge from nonlinear models of continuous media. 
 			    My recent work includes research on phase transitions in complex materials, the spectral and nonlinear stability of
 			    magnetic domains in ferromagnetic thin films, and the spectral stability of gas diffusion in glassy polymers.
 			    I am a proudly "Hecho en México" mathematician (with a physicists background) whose math-research interests include:
@@ -86,6 +84,8 @@
 					<li>Statistics and Probability</li>
 					<li>Scientific Programming</li>
 				</ul>
+			<p class="text-muted">I consider myself a skilled person who easily adapts to different situations and working conditions.</p>
+		            
                 	<p class="text-muted"> I really enjoy treking with my wife and pulling espressos. </p>
 			<a href="assets/img/CV_2024_SPANISH_IE.pdf" target="_blank"> Spanish CV </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp 
 			    <a href="assets/img/CV_2024_ENGLISH_IE.pdf" target="_blank"> English CV
