--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			
 	            <div class="column" style="width:70%">
 	           	<p class="text-muted">
-			    <i class="fa fa-quote-left fa-3x fa-pull-left fa-border" aria-hidden="true"></i>
+			    <i class="fa fa-quote-left fa-3x fa-pull-left" aria-hidden="true"></i>
                             I am interested in studying coherent structures that emerge from nonlinear models of continuous media. 
 			    My recent work includes research on phase transitions in complex materials, the spectral and nonlinear stability of
 			    magnetic domains in ferromagnetic thin films, and the spectral stability of gas diffusion in glassy polymers.
