--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <section class="page-section bg-light" id="talks">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Talks</h2>
+                    <h2 class="section-heading text-uppercase">Recorded Talks</h2>
                     <!-- <h3 class="section-subheading text-muted"> Thanks to my mentors and friends, I learned to apply mathematics at different fields</h3> -->
                 </div>
                 <div class="row">
