--- a/index.html
+++ b/index.html
@@ -284,6 +284,15 @@
                     <!-- <h3 class="section-subheading text-muted"> Thanks to my mentors and friends, I learned to apply mathematics at different fields</h3> -->
                 </div>
                 <div class="row">
+		    <--<div class="col-lg-4">
+                        <div class="team-member">
+                            <!img class="mx-auto rounded-circle" src="assets/img/team/ramon.png" alt="..." />
+                             <!a href="https://mym.iimas.unam.mx/ramon/index.html" target="_blank"><h4>Dr. Ramon Plaza</h4></a>
+                        </div>
+			    <div class="text-center">
+                             <!a href="https://www.iimas.unam.mx/" target="_blank"> <img src="assets/img/logos/iimas.jpeg"  width="60" height="60" > </a> <p class="text-muted"> IIMAS - UNAM </p>
+			    </div>
+                    </div>-->
                     <div class="col-lg-4">  
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/SEDNOL.jpg" alt="..." />
@@ -299,15 +308,7 @@
 			    </div> -->
                     </div>
 			
-                    <!--<div class="col-lg-4">
-                        <div class="team-member">
-                            <img class="mx-auto rounded-circle" src="assets/img/team/ramon.png" alt="..." />
-                             <a href="https://mym.iimas.unam.mx/ramon/index.html" target="_blank"><h4>Dr. Ramon Plaza</h4></a>
-                        </div>
-			    <div class="text-center">
-                             <a href="https://www.iimas.unam.mx/" target="_blank"> <img src="assets/img/logos/iimas.jpeg"  width="60" height="60" > </a> <p class="text-muted"> IIMAS - UNAM </p>
-			    </div>
-                    </div>-->
+                    
 		<!--	
                     <div class="col-lg-4">
                         <div class="team-member">
