--- a/index.html
+++ b/index.html
@@ -382,6 +382,11 @@
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
                 <div class="text-center">
+		    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                        </span>
+                        </div>
+
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
                             <i class="fas fa-circle fa-stack-2x text-primary"></i>
@@ -389,7 +394,7 @@
                         </span>
                         <h4 class="my-3">Highschool Teacher</h4>
 			<p class="text-muted"><b>  ENP 1 Gabino Barreda-UNAM</b></p>
-			<p class="text-muted"> Mathematics IV-VI </p>
+			<p class="text-muted"> Mathematics IV </p>
 			<p class="text-muted"> Mathematics V </p>
 			<p class="text-muted"> Mathematics VI areas 2 and 3 </p>
                     </div>
