--- a/index.html
+++ b/index.html
@@ -74,19 +74,18 @@
 			    magnetic domains in ferromagnetic thin films, and the spectral stability of gas diffusion in glassy polymers.
 			    I am a proudly "Hecho en México" mathematician (with a physicists background) whose math-research interests include:
 			</p>
-			<p class="text-muted">
-				<ul class="text-muted">
-  					<li>Calculus of Variations</li>
-					<li>Spectral and Nonlinear Stability of Coherent Structures</li>
- 					<li>Partial Differential Equations</li>
-					<li>Nonlocal operators</li>
-  					<li>Analysis</li>
-					<li>Statistics and Probability</li>
-					<li>Scientific Programming</li>
-				</ul>
+			<ul class="fa-ul">
+  				<li><i class="fa-li fa fa-check-square"></i>Calculus of Variations</li>
+  				<li><i class="fa-li fa fa-check-square"></i>Spectral and Nonlinear Stability of Coherent Structures</li>
+  				<li><i class="fa-li fa fa-check-square"></i>Partial Differential Equations</li>
+  				<li><i class="fa-li fa fa-check-square"></i>Nonlocal operators</li>
+				<li><i class="fa-li fa fa-check-square"></i>Analysis</li>
+				<li><i class="fa-li fa fa-check-square"></i>Scientific Programming</li>
+				<li><i class="fa-li fa fa-check-square"></i>Statistics and Probability</li>
+			</ul>
 			<p class="text-muted">I consider myself a skilled person who easily adapts to different situations and working conditions.</p>
 		            
-                	<p class="text-muted"> I really enjoy treking with my wife and pulling espressos. </p>
+                	<!--p class="text-muted"> I really enjoy treking with my wife and pulling espressos. </p-->
 			<a href="assets/img/CV_2024_SPANISH_IE.pdf" target="_blank"> Spanish CV </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp 
 			    <a href="assets/img/CV_2024_ENGLISH_IE.pdf" target="_blank"> English CV
 			</a> 
@@ -383,9 +382,8 @@
                 </div>
                 <div class="text-center">
 		    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                        </span>
-                        </div>
+			<p class="text-muted"><b></b></p>
+                    </div>
 
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
