--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
 			    My recent work includes research on phase transitions in complex materials, the spectral and nonlinear stability of
 			    magnetic domains in ferromagnetic thin films, and the spectral stability of gas diffusion in glassy polymers.
 			    I am a proudly "Hecho en México" mathematician (with a physicists background) whose math-research interests include:
-			</p>
-			<ul class="fa-ul">
+			
+			    <ul class="fa-ul">
   				<li><i class="fa-li fa fa-check-square"></i>Calculus of Variations</li>
   				<li><i class="fa-li fa fa-check-square"></i>Spectral and Nonlinear Stability of Coherent Structures</li>
   				<li><i class="fa-li fa fa-check-square"></i>Partial Differential Equations</li>
@@ -82,7 +82,8 @@
 				<li><i class="fa-li fa fa-check-square"></i>Analysis</li>
 				<li><i class="fa-li fa fa-check-square"></i>Scientific Programming</li>
 				<li><i class="fa-li fa fa-check-square"></i>Statistics and Probability</li>
-			</ul>
+			    </ul>
+			</p>
 			<p class="text-muted">I consider myself a skilled person who easily adapts to different situations and working conditions.</p>
 		            
                 	<!--p class="text-muted"> I really enjoy treking with my wife and pulling espressos. </p-->
@@ -380,9 +381,9 @@
                     <h2 class="section-heading text-uppercase">High School Teaching</h2>
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
-                <div class="text-center">
+                <div class="row text-center">
 		    <div class="col-md-4">
-			<p class="text-muted"><b></b></p>
+			<!-- p class="text-muted"><b></b></p -->
                     </div>
 
                     <div class="col-md-4">
