--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
 			    My recent work includes research on phase transitions in complex materials, the spectral and nonlinear stability of
 			    magnetic domains in ferromagnetic thin films, and the spectral stability of gas diffusion in glassy polymers.
 			    I am a proudly "Hecho en México" mathematician (with a physicists background) whose math-research interests include:
-			
+			</p>
+			<p class="text-muted">
 			    <ul class="fa-ul">
   				<li><i class="fa-li fa fa-check-square"></i>Calculus of Variations</li>
   				<li><i class="fa-li fa fa-check-square"></i>Spectral and Nonlinear Stability of Coherent Structures</li>
