--- a/index.html
+++ b/index.html
@@ -74,17 +74,15 @@
 			    magnetic domains in ferromagnetic thin films, and the spectral stability of gas diffusion in glassy polymers.
 			    I am a proudly "Hecho en México" mathematician (with a physicists background) whose math-research interests include:
 			</p>
-			<p class="text-muted">
 			    <ul class="fa-ul">
-  				<li><i class="fa-li fa fa-check-square"></i>Calculus of Variations</li>
-  				<li><i class="fa-li fa fa-check-square"></i>Spectral and Nonlinear Stability of Coherent Structures</li>
-  				<li><i class="fa-li fa fa-check-square"></i>Partial Differential Equations</li>
-  				<li><i class="fa-li fa fa-check-square"></i>Nonlocal operators</li>
-				<li><i class="fa-li fa fa-check-square"></i>Analysis</li>
-				<li><i class="fa-li fa fa-check-square"></i>Scientific Programming</li>
-				<li><i class="fa-li fa fa-check-square"></i>Statistics and Probability</li>
+  				<li><i class="fa-li fa fa-check-square"></i><p class="text-muted">Calculus of Variations</p></li>
+  				<li><i class="fa-li fa fa-check-square"></i><p class="text-muted">Spectral and Nonlinear Stability of Coherent Structures</p></li>
+  				<li><i class="fa-li fa fa-check-square"></i><p class="text-muted">Partial Differential Equations</p></li>
+  				<li><i class="fa-li fa fa-check-square"></i><p class="text-muted">Nonlocal operators</p></li>
+				<li><i class="fa-li fa fa-check-square"></i><p class="text-muted">Analysis</p></li>
+				<li><i class="fa-li fa fa-check-square"></i><p class="text-muted">Scientific Programming</p></li>
+				<li><i class="fa-li fa fa-check-square"></i><p class="text-muted">Statistics and Probability</p></li>
 			    </ul>
-			</p>
 			<p class="text-muted">I consider myself a skilled person who easily adapts to different situations and working conditions.</p>
 		            
                 	<!--p class="text-muted"> I really enjoy treking with my wife and pulling espressos. </p-->
