--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
                 </div>
                 <div class="row">
 		    <div class="column" style="width:30%" align="center">
+			    <!--Vertical spacing -->
+			    <p> </p>
+    			    <br>
+			    <br>
+			    <br>
+			    <p> </p>
 			     <div class="timeline-image">
 				<img class="rounded-circle img-fluid" src="assets/img/foto.jpg" alt="photo" style="width:60%; border: 8px solid #ffc800"" />
 			     </div>
