--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
                     	    <div class="col-md-4">
                         	<span class="fa-stack fa-4x">
                             	    <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            	    <i class="fas fa-file-text-o fa-stack-1x fa-inverse"></i>
+                            	    <i class="fas fa-file-pdf-o fa-stack-1x fa-inverse"></i>
                         	</span>
-                    	    <a href="assets/img/CV_2024_ENGLISH_IE.pdf" target="_blank"> English CV </a>
+                    	    <a href="assets/img/CV_2024_ENGLISH_IE.pdf" target="_blank"> <h4 class="my-3">English CV </h4></a>
 			    </div>
 
 			    <!-- Segundo renglon -->
@@ -113,7 +113,8 @@
                             	    <i class="fas fa-circle fa-stack-2x text-primary"></i>
                             	    <i class="fas fa-file-text-o fa-stack-1x fa-inverse"></i>
                         	</span>
-				<a href="assets/img/CV_2024_SPANISH_IE.pdf" target="_blank"> Spanish CV </a>
+				    
+				<h4 class="my-3"><a href="assets/img/CV_2024_SPANISH_IE.pdf" target="_blank"> Spanish CV </a></h4>
                         	<!-- h4 class="my-3">Highschool Teacher</h4 -->
 				    <!-- p class="text-muted"><b>  ENP 1 Gabino Barreda-UNAM</b></p -->
                     	    </div>
