--- a/index.html
+++ b/index.html
@@ -96,11 +96,12 @@
 			<div class="row text-center">
 			    <!-- Primer renglon -->
                     	    <div class="col-md-4">
-                        	<span class="fa-stack fa-4x">
+                        	<a href="assets/img/CV_2024_ENGLISH_IE.pdf" target="_blank">
+				<span class="fa-stack fa-4x">
                             	    <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            	    <i class="fas fa-file-pdf-o fa-stack-1x fa-inverse"></i>
+                            	    <i class="fas fa-file-pdf fa-stack-1x fa-inverse"></i>
                         	</span>
-                    	    <a href="assets/img/CV_2024_ENGLISH_IE.pdf" target="_blank"> <h4 class="my-3">English CV </h4></a>
+                    	    <h4 class="my-3">English CV </h4></a>
 			    </div>
 
 			    <!-- Segundo renglon -->
@@ -111,7 +112,7 @@
                     	    <div class="col-md-4">
                         	<span class="fa-stack fa-4x">
                             	    <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            	    <i class="fas fa-file-text-o fa-stack-1x fa-inverse"></i>
+                            	    <i class="fas fa-file-text fa-stack-1x fa-inverse"></i>
                         	</span>
 				    
 				<h4 class="my-3"><a href="assets/img/CV_2024_SPANISH_IE.pdf" target="_blank"> Spanish CV </a></h4>
