--- a/index.html
+++ b/index.html
@@ -97,11 +97,12 @@
 			    <!-- Primer renglon -->
                     	    <div class="col-md-4">
                         	<a href="assets/img/CV_2024_ENGLISH_IE.pdf" target="_blank">
-				<span class="fa-stack fa-4x">
-                            	    <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            	    <i class="fas fa-file-pdf fa-stack-1x fa-inverse"></i>
-                        	</span>
-                    	    <h4 class="my-3">English CV </h4></a>
+				    <span class="fa-stack fa-4x">
+                            	    	<i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            	    	<i class="fas fa-file-pdf fa-stack-1x fa-inverse"></i>
+                        	    </span>
+                    	            <h4 class="my-3">English CV </h4>
+			        </a>
 			    </div>
 
 			    <!-- Segundo renglon -->
@@ -110,14 +111,13 @@
                     	    </div>
 			    <!-- Tercer renglon -->
                     	    <div class="col-md-4">
-                        	<span class="fa-stack fa-4x">
-                            	    <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            	    <i class="fas fa-file-text fa-stack-1x fa-inverse"></i>
-                        	</span>
-				    
-				<h4 class="my-3"><a href="assets/img/CV_2024_SPANISH_IE.pdf" target="_blank"> Spanish CV </a></h4>
-                        	<!-- h4 class="my-3">Highschool Teacher</h4 -->
-				    <!-- p class="text-muted"><b>  ENP 1 Gabino Barreda-UNAM</b></p -->
+				<a href="assets/img/CV_2024_SPANISH_IE.pdf" target="_blank">
+                        	    <span class="fa-stack fa-4x">
+                            	    	<i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            	    	<i class="fas fa-file-pdf fa-stack-1x fa-inverse"></i>
+                        	    </span>
+				    <h4 class="my-3">Spanish CV</h4>
+				</a>
                     	    </div>
                 
 			</div>   
