--- a/index.html
+++ b/index.html
@@ -366,6 +366,7 @@
                     <h2 class="section-heading text-uppercase">University Teaching</h2>
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
+		<!--University teaching-->
                 <div class="row text-center">
                     <div class="col-md-4">
                         <span class="fa-stack fa-4x">
@@ -406,6 +407,7 @@
 			<p class="text-muted"> Introduction to Mathematical Thinking </p>
                     </div>
 		</div>
+		<!--Highschool teaching-->
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">High School Teaching</h2>
                     <h3 class="section-subheading text-muted"> </h3>
@@ -425,6 +427,37 @@
 			<p class="text-muted"> Mathematics IV </p>
 			<p class="text-muted"> Mathematics V </p>
 			<p class="text-muted"> Mathematics VI areas 2 and 3 </p>
+                    </div>
+                
+		</div>
+		<!--Course Resources-->
+                <div class="text-center">
+                    <h2 class="section-heading text-uppercase">Course Resources</h2>
+                    <h3 class="section-subheading text-muted"> </h3>
+                </div>
+                <div class="row text-center">
+		    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-area-chart fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Geogebra Applets</h4>
+                    </div>
+			
+		    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-pencil-square fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Interactive lessons</h4>
+                    </div>
+
+                    <div class="col-md-4">
+                        <span class="fa-stack fa-4x">
+                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            <i class="fas fa-book-open fa-stack-1x fa-inverse"></i>
+                        </span>
+                        <h4 class="my-3">Notes</h4>
                     </div>
                 
 		</div>
