--- a/index.html
+++ b/index.html
@@ -482,8 +482,9 @@
                     <h2 class="section-heading text-uppercase">Testing</h2>
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
-                <div class="row text-center">
 
+                <div class="row">
+                    <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioApplet">
                                 <div class="portfolio-hover">
@@ -500,7 +501,9 @@
                                 <div class="portfolio-caption-subheading text-muted">Numerical implementations of different topics</div>
                             </div>
                         </div>
+		    </div>
 			
+                    <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioInteractive">
                                 <div class="portfolio-hover">
@@ -517,7 +520,9 @@
                                 <div class="portfolio-caption-subheading text-muted">Self-assessment lessons and subject booklets</div>
                             </div>
                         </div>
+		    </div>
 
+                    <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioNotes">
                                 <div class="portfolio-hover">
@@ -534,6 +539,7 @@
                                 <div class="portfolio-caption-subheading text-muted">Lesson notes and summaries</div>
                             </div>
                         </div>
+		    </div>
 
 		</div>
 		    
