--- a/index.html
+++ b/index.html
@@ -488,13 +488,13 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioApplet">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-				<span class="fa-stack fa-4x">
-                            	    <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            	    <i class="fas fa-area-chart fa-stack-1x fa-inverse"></i>
-                        	</span>
-                                <!-- img class="img-fluid" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." /-->
+                                    <div class="portfolio-hover-content">
+					<span class="fa-stack fa-4x">
+                            	    	    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            	    	    <i class="fas fa-area-chart fa-stack-1x fa-inverse"></i>
+                        		</span>
+				    </div>
+				</div>
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Geogebra Applets</div>
