--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
 
-                <div class="row">
+                <div class="row text-center">
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioApplet">
@@ -502,18 +502,18 @@
                             </div>
                         </div>
 		    </div>
-			
+
                     <div class="col-lg-4 col-sm-6 mb-4">
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioInteractive">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-				<span class="fa-stack fa-4x">
-                            	    <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            	    <i class="fas fa-pencil-square fa-stack-1x fa-inverse"></i>
-                        	</span>
-                                <!-- img class="img-fluid" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." /-->
+                                    <div class="portfolio-hover-content">
+					<span class="fa-stack fa-4x">
+                            	    	    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            	    	    <i class="fas fa-pencil-square fa-stack-1x fa-inverse"></i>
+                        		</span>
+				    </div>
+				</div>
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Interactive Lessons</div>
@@ -526,13 +526,13 @@
                         <div class="portfolio-item">
                             <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioNotes">
                                 <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-				<span class="fa-stack fa-4x">
-                            	    <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            	    <i class="fas fa-book-open fa-stack-1x fa-inverse"></i>
-                        	</span>
-                                <!-- img class="img-fluid" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." /-->
+                                    <div class="portfolio-hover-content">
+					<span class="fa-stack fa-4x">
+                            	    	    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                            	    	    <i class="fas fa-book-open fa-stack-1x fa-inverse"></i>
+                        		</span>
+				    </div>
+				</div>
                             </a>
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading">Notes</div>
