--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
 				</div>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Geogebra Applets</div>
+                                <div class="portfolio-caption-heading"><h4 class="my-3">Geogebra Applets</h4></div>
                                 <div class="portfolio-caption-subheading text-muted">Numerical implementations of different topics</div>
                             </div>
                         </div>
