--- a/index.html
+++ b/index.html
@@ -449,39 +449,6 @@
                     <h2 class="section-heading text-uppercase">Course Resources</h2>
                     <h3 class="section-subheading text-muted"> </h3>
                 </div>
-                <div class="row text-center">
-		    <div class="col-md-4">
-			    
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-area-chart fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Geogebra Applets</h4>
-                    </div>
-			
-		    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-pencil-square fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Interactive lessons</h4>
-                    </div>
-
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-book-open fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Notes</h4>
-                    </div>
-                
-		</div>
-
-		<!--Testing Resource-->
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Testing</h2>
-                    <h3 class="section-subheading text-muted"> </h3>
-                </div>
 
                 <div class="row text-center">
                     <div class="col-lg-4 col-sm-6 mb-4">
@@ -516,7 +483,7 @@
 				</div>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Interactive Lessons</div>
+                                <div class="portfolio-caption-heading"><h4 class="my-3">Interactive Lessons</h4></div>
                                 <div class="portfolio-caption-subheading text-muted">Self-assessment lessons and subject booklets</div>
                             </div>
                         </div>
@@ -535,7 +502,7 @@
 				</div>
                             </a>
                             <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Notes</div>
+                                <div class="portfolio-caption-heading"><h4 class="my-3">Notes</h4></div>
                                 <div class="portfolio-caption-subheading text-muted">Lesson notes and summaries</div>
                             </div>
                         </div>
