--- a/index.html
+++ b/index.html
@@ -762,6 +762,109 @@
             </div>
         </div>
 
+<!-- Teaching Portfolio -->
+        <!-- Portfolio Applets modal popup-->
+        <div class="portfolio-modal modal fade" id="portfolioApplet" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <!-- div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div -->
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Project details-->
+                                    <!--<h2 class="text-uppercase">On the Quasiconvex Hull for a Three-well Problem in Two Dimensional Linear Elasticity</h2>-->
+                                    <!-- img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." / -->
+
+			    	    <ul class="fa-ul">
+  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Calculus of Variations</p></li>
+  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Spectral and Nonlinear Stability of Coherent Structures</p></li>
+  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Partial Differential Equations</p></li>
+  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Nonlocal operators</p></li>
+					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Analysis</p></li>
+					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Scientific Programming</p></li>
+					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Statistics and Probability</p></li>
+				    </ul>
+			
+                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                        <i class="fas fa-xmark me-1"></i>
+                                        Back
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Portfolio Interactive modal popup-->
+        <div class="portfolio-modal modal fade" id="portfolioInteractive" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Project details-->
+                                    <!--<h2 class="text-uppercase">On the Quasiconvex Hull for a Three-well Problem in Two Dimensional Linear Elasticity</h2>-->
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." />
+                                    <p class="item-intro text-muted">2022</p>
+				    <p><a href="https://arxiv.org/abs/2012.02871.pdf" target="_blank"> Go to arXiv</a></p>
+				    <p><a href="https://link.springer.com/article/10.1007/s00526-022-02209-4" target="_blank"> Go to published version</a></p>
+                                    <ul class="list-inline">
+                                        <li>
+                                            <strong>Topic:</strong>
+                                            Calculus of Variations and Partial Differential Equations 
+                                        </li>
+                                    </ul>
+                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                        <i class="fas fa-xmark me-1"></i>
+                                        Back
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Portfolio Notes modal popup-->
+        <div class="portfolio-modal modal fade" id="portfolioNotes" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div>
+                    <div class="container">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <div class="modal-body">
+                                    <!-- Project details-->
+                                    <!--<h2 class="text-uppercase">On the Quasiconvex Hull for a Three-well Problem in Two Dimensional Linear Elasticity</h2>-->
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." />
+                                    <p class="item-intro text-muted">2022</p>
+				    <p><a href="https://arxiv.org/abs/2012.02871.pdf" target="_blank"> Go to arXiv</a></p>
+				    <p><a href="https://link.springer.com/article/10.1007/s00526-022-02209-4" target="_blank"> Go to published version</a></p>
+                                    <ul class="list-inline">
+                                        <li>
+                                            <strong>Topic:</strong>
+                                            Calculus of Variations and Partial Differential Equations 
+                                        </li>
+                                    </ul>
+                                    <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
+                                        <i class="fas fa-xmark me-1"></i>
+                                        Back
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+	    
 	<!-- Future work    
         <!-- Portfolio item 4 modal popup-->
         <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" role="dialog" aria-hidden="true">
