--- a/index.html
+++ b/index.html
@@ -777,13 +777,17 @@
                                     <!-- img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." / -->
 
 			    	    <ul class="fa-ul">
-  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Calculus of Variations</p></li>
-  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Spectral and Nonlinear Stability of Coherent Structures</p></li>
-  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Partial Differential Equations</p></li>
-  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Nonlocal operators</p></li>
-					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Analysis</p></li>
-					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Scientific Programming</p></li>
-					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Statistics and Probability</p></li>
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted">Quadratic Forms</p></a></li>
+  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Riemann Sums</p></li>
+  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Hill Spherical Vortex</p></li>
+  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Fourier Series</p></li>
+					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Trigonometric Circle</p></li>
+					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Frecuency Parameter at Trigonometric Functions</p></li>
+					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Conic sections and Eccentricity</p></li>
+					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Meteorite Trajectory</p></li>
+					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Wave Equation</p></li>
+					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Heat equation</p></li>
+					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Simple vs Compound Interest</p></li>					
 				    </ul>
 			
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
