--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
                                     <!-- Project details-->
                                     <!--<h2 class="text-uppercase">Stability of Moving Neel Walls in Ferromagnetic Thin Films</h2>-->
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_4_final.jpg" alt="..." />
-                                    <p class="item-intro text-muted">2024</p>
+                                    <p class="item-intro text-muted">2025</p>
 			            <p><a href="https://arxiv.org/abs/2409.04023" target="_blank"> Go to arXiv</a></p>
 				    <p><a href="https://link.springer.com/article/10.1007/s00332-025-10179-y" target="_blank"> Go to published version</a></p>
                                     
@@ -769,7 +769,7 @@
                 <div class="modal-content">
                     <!-- div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div -->
                     <div class="container">
-                        <div class="row justify-content-center">
+                        <div class="row justify-content-left">
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
@@ -778,16 +778,16 @@
 
 			    	    <ul class="fa-ul">
   					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted">Quadratic Forms</p></a></li>
-  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Riemann Sums</p></li>
-  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Hill Spherical Vortex</p></li>
-  					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Fourier Series</p></li>
-					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Trigonometric Circle</p></li>
-					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Frecuency Parameter at Trigonometric Functions</p></li>
-					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Conic sections and Eccentricity</p></li>
-					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Meteorite Trajectory</p></li>
-					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Wave Equation</p></li>
-					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Heat equation</p></li>
-					<li><i class="fa-li fa fa-external-link"></i><p class="text-muted">Simple vs Compound Interest</p></li>					
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted">Riemann Sums</p></a></li>
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted">Hill Spherical Vortex</p></a></li>
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted">Fourier Series</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yuwywgnw" target="_blank"><p class="text-muted">Trigonometric Circle</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/tfajd7u3" target="_blank"><p class="text-muted">Frecuency Parameter at Trigonometric Functions</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/zed2nux8" target="_blank"><p class="text-muted">Conic sections and Eccentricity</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/tepszqxr" target="_blank"><p class="text-muted">Meteor Trajectory</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/urzw5gu4" target="_blank"><p class="text-muted">Wave Equation</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/yajqwjta" target="_blank"><p class="text-muted">Heat equation</p></a></li>
+					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/mpdemf3k" target="_blank"><p class="text-muted">Simple vs Compound Interest</p></a></li>					
 				    </ul>
 			
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
