--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
                 <div class="modal-content">
                     <!-- div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div -->
                     <div class="container">
-                        <div class="row justify-content-left">
+                        <div class="row">
                             <div class="col-lg-8">
                                 <div class="modal-body">
                                     <!-- Project details-->
