--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 			    magnetic domains in ferromagnetic thin films, and the spectral stability of gas diffusion in glassy polymers.
 			    I am a proudly "Hecho en México" mathematician (with a physicists background) whose math-research interests include:
 			</p>
-			    <ul class="fa-ul">
+			    <ul class="fa-ul" style="text-aling: left;">
   				<li><i class="fa-li fa fa-check-square"></i><p class="text-muted">Calculus of Variations</p></li>
   				<li><i class="fa-li fa fa-check-square"></i><p class="text-muted">Spectral and Nonlinear Stability of Coherent Structures</p></li>
   				<li><i class="fa-li fa fa-check-square"></i><p class="text-muted">Partial Differential Equations</p></li>
