--- a/index.html
+++ b/index.html
@@ -767,16 +767,11 @@
         <div class="portfolio-modal modal fade" id="portfolioApplet" tabindex="-1" role="dialog" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
-                    <!-- div class="close-modal" data-bs-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" /></div -->
                     <div class="container">
-                        <div class="row">
-                            <div class="col-lg-8">
+                        <!--div class="row"-->
+                            <!--div class="col-lg-8"-->
                                 <div class="modal-body">
-                                    <!-- Project details-->
-                                    <!--<h2 class="text-uppercase">On the Quasiconvex Hull for a Three-well Problem in Two Dimensional Linear Elasticity</h2>-->
-                                    <!-- img class="img-fluid d-block mx-auto" src="assets/img/portfolio/Articulo_1_1.jpg" alt="..." / -->
-
-			    	    <ul class="fa-ul" style="text-aling: left;">
+			    	    <ul class="fa-ul">
   					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted">Quadratic Forms</p></a></li>
   					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted">Riemann Sums</p></a></li>
   					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted">Hill Spherical Vortex</p></a></li>
@@ -795,8 +790,8 @@
                                         Back
                                     </button>
                                 </div>
-                            </div>
-                        </div>
+                            <!--/div-->
+                        <!--/div-->
                     </div>
                 </div>
             </div>
