--- a/index.html
+++ b/index.html
@@ -772,7 +772,7 @@
                             <!--div class="col-lg-8"-->
                                 <div class="modal-body">
 			    	    <ul class="fa-ul">
-  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted">Quadratic Forms</p></a></li>
+  					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/d2jtfuye" target="_blank"><p class="text-muted" align="left">Quadraticc Forms</p></a></li>
   					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/pwxhdupy" target="_blank"><p class="text-muted">Riemann Sums</p></a></li>
   					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/cmbtmwu9" target="_blank"><p class="text-muted">Hill Spherical Vortex</p></a></li>
   					<li><i class="fa-li fa fa-external-link"></i><a href="https://www.geogebra.org/m/kttpka6a" target="_blank"><p class="text-muted">Fourier Series</p></a></li>
